20180814
--------
- Added #37783 - Update all instances of the Spring Framework in order to include fixes for the latest CVEs
- Fixed #37932 - The service fails while obtaining the PKs for a view if the user only has metadata privileges over it
- Fixed #38381 - Avoid entities without key properties

20180412
--------
- Fixed #36961 - User names should be quoted in CONNECT statements
- Fixed #36935 - Explain the required privileges for users in the user manual
- Fixed #36977 - Fix logging of exceptions

20180410
--------
- Fixed #36498 - Issues addressing individual properties and their values
- Fixed #36827 - NPE when accessing the root of the OData 4 Service
- Fixed #36813 - If the OData service is deployed in the web container included with Denodo Platform,
                 accessing its base URL will lead to a "too many redirects" error

20180312
--------
- Fixed #35414 - OData 4 web service of a view without primary key should not be allowed to be available for an OData web service
- Fixed #36282 - The OData 4 Service cannot access VDP databases and views with non-ASCII characters in their names

20170912
--------
- Fixed #33635 - Possible Olingo issue with complex types generated by means of NEST

20170821
--------
- Added #33444 - Debug support

20170620
--------
-Fixed #32942 - The odata.serviceRoot property does not affect "@odata.context" for the Service Document

20170518
--------
-Added #32414 - Create scripts to manage the odata4 service as Windows service
-Fixed #32391 - Password issue in OData
20170404
--------
- Fixed #29848 - Use Date/Timestamp literals instead of String
- Added #29840 - Adding support for the MIME type application/json;odata.metadata=full
- Added #31695 - Review semantics of $top and $skip and how they are used for pagination

20170307
--------
- Fixed #31232 - Error adding a key to project in a SELECT_NAVIGATIONAL sentence
- Fixed #31233 - Error using $expand=*