@@ -152,7 +152,9 @@ public class DenodoODataAuthDataSource implements DataSource {
     	try {
 
             DenodoODataConnectionWrapper connection = this.authenticatedConnection.get();
+
             if (connection == null) {
+
                 connection = new DenodoODataConnectionWrapper(this.dataSource.getConnection());
 
                 StringBuilder command;
@@ -174,18 +176,32 @@ public class DenodoODataAuthDataSource implements DataSource {
                      * (JNDI resource).
                      */
                     command = new StringBuilder("CONNECT ").append(" DATABASE ").append(quoteIdentifier(DATA_BASE_NAME));
+
                 } else if (getParameter(USER_NAME) != null) {
+
                     // Basic auth
                     command = new StringBuilder("CONNECT USER ").append(quoteIdentifier(USER_NAME)).append(" PASSWORD ").append("'")
                             .append(getParameter(PASSWORD_NAME)).append("'").append(" DATABASE ").append(quoteIdentifier(DATA_BASE_NAME));
+
                 } else if (getParameter(OAUTH2_CLIENT_TOKEN) != null) {
+
                     // OAuth 2.0
                     command = new StringBuilder("CONNECT OAUTHTOKEN '").append(getParameter(OAUTH2_CLIENT_TOKEN)).append("' DATABASE ")
                             .append(quoteIdentifier(DATA_BASE_NAME));
-                } else {
+
+                } else if (getParameter(KERBEROS_CLIENT_TOKEN) != null) {
+
                     // SPNEGO
                     command = new StringBuilder("CONNECT TOKEN '").append(getParameter(KERBEROS_CLIENT_TOKEN)).append("' DATABASE ")
                             .append(quoteIdentifier(DATA_BASE_NAME));
+
+                } else {
+
+                    // No authentication method provided
+                    logger.error("One of these authentication methods must be specified: " +
+                            "Basic Auth, OAuth 2.0 or Kerberos. Please, check the configuration");
+                    throw new IllegalArgumentException("One of these authentication methods must be specified: " +
+                            "Basic Auth, OAuth 2.0 or Kerberos. Please, check the configuration");
                 }
 
                 if (getParameter(USER_AGENT) != null) {
@@ -213,6 +229,7 @@ public class DenodoODataAuthDataSource implements DataSource {
             return connection;
             
         } catch (final SQLException e) {
+
             if (e.getMessage() != null) {
                 if (e.getMessage().contains(CONNECTION_REFUSED_ERROR)) { // Check connection refused
                     logger.error("Connection refused", e);
@@ -304,5 +321,4 @@ public class DenodoODataAuthDataSource implements DataSource {
     public Connection getConnection(final String username, final String password) throws SQLException {
         throw new UnsupportedOperationException("Not supported by AuthDataSource");
     }
-    
 }
