@@ -168,11 +168,30 @@ public class DenodoODataFilter implements Filter {
             final HttpServletRequest request = (HttpServletRequest) req;
             final HttpServletResponse response = (HttpServletResponse) res;
 
-            if (this.disabledKerberosAuth && this.disabledBasicAuth && this.disabledOAuth2) {
+            /*
+             * Property that ONLY should be true in development mode,
+             * NEVER IN PRODUCTION ENVIRONMENTS. It is useful in order
+             * to use the service with components that do not allow
+             * authentication and in this situation the web.xml file
+             * must be modified to add the property and then
+             * the service will use the credentials included in the
+             * data source configuration (JNDI resource).
+             */
+            final String developmentModeDangerousBypassAuthentication = this.servletContext.getInitParameter(
+                    "developmentModeDangerousBypassAuthentication");
+
+            // At least one authentication method is needed Basic, Kerberos or OAuth2.
+            // In case there is not auth method configured, an error is raised.
+            // The only exception is when the authentication is disabled in the web.xml file.
+            if (this.disabledKerberosAuth && this.disabledBasicAuth && this.disabledOAuth2
+                    && !Boolean.parseBoolean(developmentModeDangerousBypassAuthentication)) {
+
                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED,
-                        "Authentication required: Basic authentication disabled, Kerberos authentication disabled and OAhto2 authentication disabled or unavailable.");
+                        "Authentication required: Basic authentication disabled, " +
+                                "Kerberos authentication disabled and OAuth2 authentication disabled or unavailable.");
                 logger.trace(
-                        "Authentication required: Basic authentication disabled, Kerberos authentication disabled and OAhto2 authentication disabled or unavailable.");
+                        "Authentication required: Basic authentication disabled, " +
+                                "Kerberos authentication disabled and OAuth2 authentication disabled or unavailable.");
                 return;
             }
             
@@ -183,21 +202,13 @@ public class DenodoODataFilter implements Filter {
 
             // From Denodo 7.0, the VDP connection statement supports new headers such as User-Agent, OAuth 2.0, etc.
             boolean supportNewHeaders = Versions.ARTIFACT_ID >= Versions.MINOR_ARTIFACT_ID_SUPPORT_USER_AGENT;
-            
-            /*
-             * Property that ONLY should be true in development mode, 
-             * NEVER IN PRODUCTION ENVIRONMENTS. It is useful in order 
-             * to use the service with components that do not allow 
-             * authentication and in this situation the web.xml file
-             * must be modified to add the property and then
-             * the service will use the credentials included in the 
-             * data source configuration (JNDI resource).
-             */
-            final String developmentModeDangerousBypassAuthentication = this.servletContext.getInitParameter("developmentModeDangerousBypassAuthentication");
 
             if (!Boolean.parseBoolean(developmentModeDangerousBypassAuthentication)) {
+
                 final String authorizationHeader = request.getHeader(AUTH_KEYWORD);
+
                 if (!this.disabledKerberosAuth && authorizationHeader == null) {
+
                     response.setHeader(AUTHORIZATION_CHALLENGE_ATTRIBUTE, NEGOTIATE);
                     if (!this.disabledBasicAuth) {
                         response.addHeader(AUTHORIZATION_CHALLENGE_ATTRIBUTE, BASIC);
@@ -208,9 +219,12 @@ public class DenodoODataFilter implements Filter {
                 }
                 
                 // There are not BASIC credentials but BASIC authentication is the option available
-                if ((this.checkedAvailabiltyKerberos && !StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD) 
-                        && this.disabledKerberosAuth && !this.disabledBasicAuth) || 
-                        (authorizationHeader == null && !this.disabledBasicAuth && this.disabledKerberosAuth)) {
+                if ((this.checkedAvailabiltyKerberos && !StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD)
+                        && this.disabledKerberosAuth && !this.disabledBasicAuth)
+                        || (!StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD)
+                        && this.disabledOAuth2 && !this.disabledBasicAuth)
+                        || (authorizationHeader == null && !this.disabledBasicAuth && this.disabledKerberosAuth && this.disabledOAuth2)) {
+
                     clearRequestAuthentication();
                     logger.trace("Basic authentication is the authentication mechanism available");
                     response.setHeader(AUTHORIZATION_CHALLENGE_ATTRIBUTE, BASIC);
@@ -220,8 +234,11 @@ public class DenodoODataFilter implements Filter {
 
                 // Retrieve BASIC credentials
                 if (!this.disabledBasicAuth && StringUtils.startsWithIgnoreCase(authorizationHeader, BASIC_AUTH_KEYWORD)) {
+
                     final String[] credentials = retrieveCredentials(authorizationHeader);
+
                     if (credentials == null) {
+
                         final String reason = "Invalid credentials";
                         logger.trace(reason);
                         showLogin(response, reason);
@@ -270,34 +287,55 @@ public class DenodoODataFilter implements Filter {
             }
 
             UserAuthenticationInfo userAuthInfo = null;
+
             if (login != null) {
+
                 // Basic auth
-                userAuthInfo = new UserAuthenticationInfo(login, password, dataBaseName, 
+                userAuthInfo = new UserAuthenticationInfo(login, password, dataBaseName,
                         userAgent, serviceName, intermediateIp, clientIp);
-            } else if (kerberosClientToken != null) {
-                // Kerberos auth
-                userAuthInfo = new UserAuthenticationInfo(kerberosClientToken, true, dataBaseName, 
-                        userAgent, serviceName, intermediateIp, clientIp);
+
             } else if (oauth2ClientToken != null) {
+
                 // OAuth 2.0 auth
-                userAuthInfo = new UserAuthenticationInfo(oauth2ClientToken, false, dataBaseName, 
+                userAuthInfo = new UserAuthenticationInfo(oauth2ClientToken, false, dataBaseName,
                         userAgent, serviceName, intermediateIp, clientIp);
+
+            } else if (kerberosClientToken != null) {
+
+                // Kerberos auth
+                userAuthInfo = new UserAuthenticationInfo(kerberosClientToken, true, dataBaseName,
+                        userAgent, serviceName, intermediateIp, clientIp);
+
+            } else if (Boolean.parseBoolean(developmentModeDangerousBypassAuthentication)) {
+
+                // Authentication disabled
+                userAuthInfo = new UserAuthenticationInfo(dataBaseName, userAgent, serviceName, intermediateIp, clientIp);
+
             } else {
-                response.setStatus(HttpServletResponse.SC_METHOD_NOT_ALLOWED);
-                return;
+
+                // No authentication method provided
+                logger.error("One of these authentication methods must be specified: " +
+                        "Basic Auth, OAuth 2.0 or Kerberos");
+                throw new IllegalArgumentException("One of these authentication methods must be specified: " +
+                        "Basic Auth, OAuth 2.0 or Kerberos");
             }
 
             // Set connection parameters
             this.authDataSource.setParameters(fillParametersMap(userAuthInfo, supportNewHeaders, developmentModeDangerousBypassAuthentication));
 
-            logger.trace("Acquired data source: " + this.authDataSource);
+            if (logger.isTraceEnabled()) {
+                logger.trace("Acquired data source: " + this.authDataSource);
+            }
 
             if ((!this.checkedAvailabiltyKerberos && userAuthInfo.getKerberosClientToken() != null && !this.disabledKerberosAuth)
                     || (userAuthInfo.getOauth2ClientToken() != null && !this.disabledOAuth2)) {
+
                 try {
-                    
-                    logger.trace("Checking " + kerberosClientToken != null ? "Kerberos" : "OAuth2" + " in VDP server");
-                    
+
+                    if (logger.isTraceEnabled()) {
+                        logger.trace("Checking " + kerberosClientToken != null ? "Kerberos" : "OAuth2" + " in VDP server");
+                    }
+
                     // Get datasource connection
                     final WebApplicationContext appCtx = WebApplicationContextUtils.getWebApplicationContext(this.servletContext);
                     final DenodoODataAuthDataSource dataSource = appCtx.getBean(DenodoODataAuthDataSource.class);
@@ -432,9 +470,9 @@ public class DenodoODataFilter implements Filter {
             parameters.put(DenodoODataAuthDataSource.USER_AGENT, userAuthenticationInfo.getUserAgent());
             parameters.put(DenodoODataAuthDataSource.SERVICE_NAME, userAuthenticationInfo.getServiceName());
             parameters.put(DenodoODataAuthDataSource.INTERMEDIATE_IP, userAuthenticationInfo.getIntermediateIp());
-            parameters.put(DenodoODataAuthDataSource.CLIENT_IP, userAuthenticationInfo.getClientIp());            
+            parameters.put(DenodoODataAuthDataSource.CLIENT_IP, userAuthenticationInfo.getClientIp());
         }
-        
+
         /*
          * Property that ONLY should be true in development mode, 
          * NEVER IN PRODUCTION ENVIRONMENTS. It is useful in order 
@@ -452,5 +490,4 @@ public class DenodoODataFilter implements Filter {
     private static String escapeLiteral(final String literal) {
         return  literal.replaceAll("'", "''");
     }
-
 }
