@@ -1,3 +1,7 @@
+CURRENT
+--------
+- Added #36510 - The OData 4 Service logs an error because it is unnecessarily checking Kerberos availability in the VDP Server when no user has been configured in the data source connection
+
 20180814
 --------
 - Added #37783 - Update all instances of the Spring Framework in order to include fixes for the latest CVEs
@@ -9,4 +13,3 @@
 20180410
 --------
 - First version of the Denodo OData 4 Service for Denodo 7.0.
-
